Fix padding and margin on smaller device

--- a/docs/components/HomePage/HomePage.css
+++ b/docs/components/HomePage/HomePage.css
@@ -198,6 +198,8 @@
 
     .welcome-text-box {
         text-align: center;
+        margin: auto;
+        padding: auto;
     }
 
     .project-container {
